--- a/ClientApp/scss/site.scss
+++ b/ClientApp/scss/site.scss
@@ -1,6 +1,7 @@
-@import "./components/_dialog.scss";
-@import "./components/_dialogRwd.scss";
-@import "./abstracts/_variables.scss";
+// @import "./components/_dialog.scss";
+// @import "./components/_dialogRwd.scss";
+// @import "./abstracts/_variables.scss";
 
 body {
+    background: black;
 }
